2002-06-23  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/autofs/autofs_linux.c: compile fixes for autofs v3

2002-06-23  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_mounted): no
	expirations needed;
	(autofs_timeout_mp): likewise

	* conf/autofs/autofs_solaris_v1.c (autofs_mounted): no expirations
	needed;
	(autofs_timeout_mp): likewise

	* conf/autofs/autofs_linux.c (autofs_mounted): set the first
	expiration interval

	* amd/autil.c (am_mounted): call autofs_mounted here, instead of
	in mf_mounted()

	* amd/amd.h (NEVER): moved here from map.c
	(autofs_mounted): change argument from mntfs* to am_node*

2002-06-23  Ion Badulescu  <lionut@gonzales.badula.org>

	* conf/autofs/autofs_linux.c (autofs_mounted): set the kernel
	timeout on the autofs mountpoint to cache_duration (gopt.am_timeo)
	(autofs_timeout_mp): don't update the ttl if we're going down

	* amd/map.c (timeout_mp): don't call autofs_timeout_mp unless the
	timeout on that particular am_node has expired

	* conf/autofs/autofs_linux.c (autofs_timeout_mp): really update
	the ttl, as per the comment (compilers are not very good at
	translating comments into code...)

	* amd/amfs_auto.c (amfs_auto_lookup_one_mntfs): strdup am_path
	instead of opt_rfs into opt_fs for autofs, thus avoiding conflicts
	between link mounts pointing to the same target

2002-06-23  Ion Badulescu  <lionut@gonzales.badula.org>

	* conf/autofs/autofs_linux.c (send_fail, send_ready): new helper
	functions for sending messages back to the kernel
	(autofs_expire_one): initial implementation of the kernel-based
	expiration handler
	(autofs_handle_expire): call autofs_expire_one()
	(autofs_handle_expire_multi): ditto
	(autofs_umount_succeeded): search pending_umounts, send message
	back to the kernel
	(autofs_umount_failed): ditto
	(autofs_mount_succeeded): tell amd core not to expire autofs entries
	(autofs_timeout_mp): expiration function for autofs filesystems