@@ -3,17 +3,16 @@
 
 For each system, list if it autoconfigures, compiles, or runs.  Fill in
 email id of person who confirms the fact.  A missing entry means unverified.
-A 'no' or '!' means verified broken or nonexistent (static library).
+A 'no' or 'X' means verified broken or nonexistent (static library).
 
 SYSTEM				CONFIG	COMPILE	RUN	SHLIB	AUTOFS
 =========================	=======	=======	=======	=======	======
-i386-pc-linux-gnu-rh6.2		ion	ion	ion	ion	ion
-i386-pc-linux-gnu-rh7.1		ion	ion	ion	ion	ion
-i386-pc-linux-rh7.2		ezk	ezk	ezk	ezk	?
-i386-unknown-freebsd4.4		ezk	ezk	ezk	ezk	?
-i386-unknown-freebsd5.0		ezk	ezk	ezk	ezk	?
-ia64-hp-hpux11.20		ezk	ezk	ezk	ezk	?
-ia64-unknown-linux-rh7.1	ezk	ezk	ezk	ezk	?
+i386-pc-bsdi2.1			ion	ion	ion	X	X
+i386-pc-linux-rh6.2		ion	ion	ion	ion	ion
+i386-pc-linux-rh7.1		ion	ion	ion	ion	ion
+i386-pc-linux-rh7.2		ion	ion	ion	ion	ion
+i386-pc-linux-rh7.3		ion	ion	ion	ion	ion
+sparc-sun-solaris2.5.1		ion	ion	ion	ion	ion[1]
 sparc-sun-solaris2.6		ion	ion	ion	ion	ion
 sparc-sun-solaris2.7		ion	ion	ion	ion	ion
 sparc-sun-solaris2.8		ion	ion	ion	ion	ion
@@ -36,44 +35,9 @@ wpaul:	Bill Paul <wpaul@ctr.columbia.edu>
 
 FOOTNOTES:
 
-[1] If compiling with cc on Irix 6, then use
-
-	CC="cc -32 -Wl,-woff,84" ./buildall
-
-to build (good) "old style" 32 bit code and suppress stupid linker warnings
-about unused libraries.
-
-Also, to get NFS V3 working, you need these two patches from SGI:
-
-	patch 1615: NFS over TCP 
-	patch 2041: NFS roll-up patch
-
-and then add "-p tcp" to /etc/config/nfsd.options.
-
-[2] If compiling on Solaris 2.6+, you need to add -D_LARGEFILE64_SOURCE to
-CFLAGS to enable the 64bit file offset interface:
-
-	make CFLAGS="-O2 -g -D_LARGEFILE64_SOURCE"
-
-If you're using the standard configure script, it will add this flag for you
-automatically.
-
-[3] DU-4.0 may not use NFS (server-side) V3 by default.  You may need to
-adjust /etc/init.d/nfs, and change the nfsd startup line from to
- 
-	if /usr/sbin/nfsd $NUM_NFSD; then
-to
-	if /usr/sbin/nfsd -t 8 -u 8 ; then
-
-[4] HPUX 9.X has a bad /bin/sh that runs out of fixed memory allocations.
-If you use the configure script, you must run it as
-
-	/bin/ksh ./configure
-
-Also, this system has a bad /bin/make that cannot handle VPATH well.  You
-cannot use --srcdir or the buildall script with it.  I suggest you install
-GNU make or configure locally with "/bin/ksh ./configure".
-
-[5] nfsx is currently broken. We hope to fix it soon...
+[1] Due to limitations in the Sun Autofs v1 protocol, some amd features
+cannot be properly supported. More precisely, trying to access a link mount
+pointing to another amd entry will result in failure and/or
+deadlock. Ordinary nfs and link mounts work well, however.
 
 Erez & Ion
